IF(UNIX)
  IF(NOT APPLE)
    IF(CMAKE_SIZEOF_VOID_P MATCHES 4) 
      FIND_PACKAGE(MYSQL REQUIRED)
      FIND_PACKAGE(OpenSSL REQUIRED)

      ADD_SUBDIRECTORY(validator)
      ADD_SUBDIRECTORY(assimilator)
      ADD_SUBDIRECTORY(workgenerator)
    ENDIF(CMAKE_SIZEOF_VOID_P MATCHES 4)
  ENDIF(NOT APPLE)
ENDIF(UNIX)      

# RunBoincWorkUnit
ADD_EXECUTABLE(RunBoincWorkUnit${NAME_FILE_SUFFIX} RunBoincWorkUnit.cpp)
TARGET_LINK_LIBRARIES(RunBoincWorkUnit${NAME_FILE_SUFFIX} lbcpp-core${NAME_FILE_SUFFIX})

