INCLUDE_DIRECTORIES(
  ${LBCpp_SOURCE_DIR}/include
  ${CMAKE_CURRENT_SOURCE_DIR}
)

GENERATE_INTROSPECTION_CODE(LuaLibrary.xml LuaLibrary.cpp)

SET(LBCPP_LUA_CPP_SOURCES
  precompiled.h
  precompiled.cpp
  Node.h
  Node.cpp
  Visitor.h
  PrettyPrinterVisitor.h
  LuaInterpreter.h
  LuaSandBox.h
  LuaLibrary.xml
  ${CMAKE_CURRENT_BINARY_DIR}/LuaLibrary.cpp
)

FILE(GLOB LBCPP_LUA_LIB_SOURCES lib/*.lua )
FILE(GLOB LBCPP_LUA_LIB_METALUA_SOURCES lib/metalua/*.lua)
FILE(GLOB LBCPP_LUA_LIB_LUAANALYZE_SOURCES lib/luaanalyze/*.lua)
FILE(GLOB LBCPP_LUA_LIB_LUAANALYZE_TYPE_SOURCES lib/luaanalyze/type/*.lua)
FILE(GLOB LBCPP_LUA_LIB_LUAANALYZE_LIBRARY_SOURCES lib/luaanalyze/library/*.lua)

SET(LBCPP_LUA_SOURCES
  ${LBCPP_LUA_CPP_SOURCES}
  ${LBCPP_LUA_LIB_SOURCES}
  ${LBCPP_LUA_LIB_METALUA_SOURCES}
  ${LBCPP_LUA_LIB_LUAANALYZE_SOURCES}
  ${LBCPP_LUA_LIB_LUAANALYZE_TYPE_SOURCES}
  ${LBCPP_LUA_LIB_LUAANALYZE_LIBRARY_SOURCES}
)

SOURCE_GROUP(Lua FILES ${LBCPP_LUA_CPP_SOURCES})
SOURCE_GROUP(Lib FILES ${LBCPP_LUA_LIB_SOURCES})
SOURCE_SUB_GROUP(Lib MetaLua FILES ${LBCPP_LUA_LIB_METALUA_SOURCES})
SOURCE_SUB_GROUP(Lib LuaAnalyze FILES ${LBCPP_LUA_LIB_LUAANALYZE_SOURCES})
SOURCE_SUB_GROUP2(Lib LuaAnalyze Type FILES ${LBCPP_LUA_LIB_LUAANALYZE_TYPE_SOURCES})
SOURCE_SUB_GROUP2(Lib LuaAnalyze Library FILES ${LBCPP_LUA_LIB_LUAANALYZE_LIBRARY_SOURCES})

GENERATE_LBCPP_PRECOMPILED(precompiled LBCPP_LUA_SOURCES)

ADD_LIBRARY(lbcpp-lua${NAME_FILE_SUFFIX} SHARED ${LBCPP_LUA_SOURCES})
TARGET_LINK_LIBRARIES(lbcpp-lua${NAME_FILE_SUFFIX} lbcpp-core${NAME_FILE_SUFFIX})

