INCLUDE_DIRECTORIES(
  ${LBCpp_SOURCE_DIR}/include
  ${CMAKE_CURRENT_SOURCE_DIR}
)

GENERATE_INTROSPECTION_CODE(LuaLibrary.xml LuaLibrary.cpp)

SET(INTELUA_INTERPRETER_SOURCES
  precompiled.h
  precompiled.cpp
  InteluaInterpreter.h
  InteluaInterpreter.cpp
  LuaLibrary.xml
  ${CMAKE_CURRENT_BINARY_DIR}/LuaLibrary.cpp
)

SET(INTELUA_AST_SOURCES
  Node.h
  Expression.h
  Statement.h
  Node.cpp
  Visitor.h
  Rewriter.h
  Scope.h
  Scope.cpp
)

SET(INTELUA_VISITOR_SOURCES
  ScopeVisitor.h
  PrettyPrinterVisitor.h
)

SET(INTELUA_REWRITER_SOURCES
  InteluaPreprocessRewriter.h
  DerivableRewriter.h
  SubspecifiedRewriter.h
)

FILE(GLOB INTELUA_MAIN_SOURCES lib/*.lua)
FILE(GLOB INTELUA_LANGUAGE_SOURCES lib/Language/*.lua)
FILE(GLOB INTELUA_TESTS_SOURCES Tests/*.lua)

SET(LBCPP_LUA_SOURCES
  # cpp
  ${INTELUA_INTERPRETER_SOURCES}
  ${INTELUA_AST_SOURCES}
  ${INTELUA_VISITOR_SOURCES}
  ${INTELUA_REWRITER_SOURCES}

  # lua
  ${INTELUA_MAIN_SOURCES}
  ${INTELUA_LANGUAGE_SOURCES}
  ${INTELUA_TESTS_SOURCES}
)

SOURCE_GROUP(Interpreter FILES ${INTELUA_INTERPRETER_SOURCES})
SOURCE_GROUP(AST FILES ${INTELUA_AST_SOURCES})
SOURCE_GROUP(Visitor FILES ${INTELUA_VISITOR_SOURCES})
SOURCE_GROUP(Rewriter FILES ${INTELUA_REWRITER_SOURCES})

SOURCE_GROUP(Intelua FILES ${INTELUA_MAIN_SOURCES})
SOURCE_SUB_GROUP(Intelua Language FILES ${INTELUA_LANGUAGE_SOURCES})
SOURCE_SUB_GROUP(Intelua Tests FILES ${INTELUA_TESTS_SOURCES})

GENERATE_LBCPP_PRECOMPILED(precompiled LBCPP_LUA_SOURCES)

ADD_LIBRARY(lbcpp-lua${NAME_FILE_SUFFIX} SHARED ${LBCPP_LUA_SOURCES})
TARGET_LINK_LIBRARIES(lbcpp-lua${NAME_FILE_SUFFIX} lbcpp-core${NAME_FILE_SUFFIX})

