INCLUDE_DIRECTORIES(
  ${LBCpp_SOURCE_DIR}/include
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)

GENERATE_INTROSPECTION_CODE(MNISTClasses.xml MNISTClasses.cpp)

SET(LBCPP_MNIST_SOURCES
  DigiBox.cpp
  MNISTProgram.h
  MNISTImage.h
  MNISTPerception.h
  MatlabFileParser.h
  MNISTClasses.xml
  ${CMAKE_CURRENT_BINARY_DIR}/MNISTClasses.cpp
)

ADD_EXECUTABLE(mnist ${LBCPP_MNIST_SOURCES})
TARGET_LINK_LIBRARIES(mnist lbcpp-core)


